# rust-simple-gossip

./: .gitignore  Cargo.toml  README.md  build.sh  peer1.sh  peer2.sh  peer3.sh
bins/gossip-app/: Cargo.toml
bins/gossip-app/src/: logger.rs  main.rs
bins/gossip_app/: Cargo.toml
bins/gossip_app/src/: main.rs
crates/connection-manager/: Cargo.toml
crates/connection-manager/src/: connection_manager.rs  lib.rs  peer.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: discovery.rs
crates/gossip/: Cargo.toml
crates/gossip/src/: app.rs  lib.rs
crates/message/: Cargo.toml
crates/message/src/: message.rs
crates/utils/: Cargo.toml
crates/utils/src/: channel.rs
src/: main.rs
