[package]
name = "pj_001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
time = "0.3.36"

[[bin]]
name = "peer"
path = "src/main.rs"