[package]
name = "gossip-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gossip.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

clap = { version = "4.5.4", features = ["derive"] }
time = "0.3.36"

[[bin]]
name = "gossip_app"
path = "src/main.rs"