[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connection-manager.workspace = true
discovery.workspace = true
message.workspace = true

tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true